# flight-agent

./: .editorconfig  .vercelignore  API_DOCUMENTATION.md  README.md  bhindi.db  flight_booking.db  main.py  mcp_server.py  pyproject.toml  requirements.in  requirements.txt  vercel.json
.cursor/rules/: mcp-python-sdk.mdc  mcp.mdc
app/: database.py  main.py
app/config/: amadeus_config.py
app/models/: models.py
app/routers/: flight_router.py
app/schemas/: schemas.py
app/scripts/: seed_data.py
app/services/: amadeus_service.py  flight_service.py
app/utils/: logger.py
